[gd_scene load_steps=7 format=3 uid="uid://cr5atnwsdy6t4"]

[ext_resource type="Script" uid="uid://feje0tfutok2" path="res://Prefabs/Bullet/knife.gd" id="1_e8j1w"]
[ext_resource type="Texture2D" uid="uid://dwps61cmlf7s" path="res://Resources/knife.png" id="1_eogbi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3s5m"]
size = Vector2(60, 20)

[sub_resource type="Animation" id="Animation_nole0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4qlie"]
resource_name = "fade_out"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.9),
"transitions": PackedFloat32Array(0.732042, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4wee"]
_data = {
&"RESET": SubResource("Animation_nole0"),
&"fade_out": SubResource("Animation_4qlie")
}

[node name="Knife" type="Area2D" groups=["bullet"]]
script = ExtResource("1_e8j1w")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
texture = ExtResource("1_eogbi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f3s5m")

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m4wee")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_deletion_timer_timeout"]
